<resources>
    <string name="app_name">Trace</string>
    <string name="Title">Your Lists</string>
    <string name="New_List">New List</string>
    <string name="New_Item">New Item</string>
    <string name="Delete_List">Delete List</string>
    <string name="Delete_Item">Delete Item</string>
    <string name="Edit_List">Edit List</string>
    <string name="Edit_Item">Edit Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="List_Name">List Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="rankTitle">Rank title</string>
    <string name="add_show">Add Show</string>
    <string name="add_rank">Add</string>
    <string name="add_new_list_desc">Add new list</string>
    <string name="add_new_show_desc">Add new show</string>
    <string name="Show_Name">Show Name</string>
    <string name="grade_hint">Grade (from 0.00 to 10.00)</string>
    <string name="showTitle">Show Title</string>
    <string name="tagsTitle">Create Tags</string>
    <string name="image_not_added">Image isn\'t added</string>

</resources>